Fix phrases.xml poi_barrier_bar

--- a/OsmAnd/res/values/phrases.xml
+++ b/OsmAnd/res/values/phrases.xml
@@ -5103,7 +5103,7 @@
 	<string name="poi_sump_buster">Sump buster</string>
 	<string name="poi_wedge">Wedge</string>
 	<string name="poi_wicket_gate">Wicket gate</string>
-	<string name="poi_barrier_bar">Bar</string>
+	<string name="poi_barrier_bar">Barrier bar</string>
 
 	<string name="poi_barrier_board">Barrier board</string>
 	<string name="poi_barrier_tyres">Tyres</string>
