--- a/OsmAnd/res/values-es/phrases.xml
+++ b/OsmAnd/res/values-es/phrases.xml
@@ -4543,7 +4543,7 @@
     <string name="poi_sump_buster">Bomba de limpieza</string>
     <string name="poi_wedge">Cuña</string>
     <string name="poi_wicket_gate">Postigo</string>
-    <string name="poi_barrier_bar">Bar</string>
+    <string name="poi_barrier_bar">Barrera de barras</string>
     <string name="poi_spikes">Picos</string>
     <string name="poi_barrier_tyres">Llantas</string>
     <string name="poi_tank_trap">Barricada</string>
