--- a/OsmAnd/res/layout/free_favorites_backup_card.xml
+++ b/OsmAnd/res/layout/free_favorites_backup_card.xml
@@ -7,73 +7,68 @@
 	android:layout_marginTop="@dimen/content_padding"
 	android:layout_marginBottom="@dimen/content_padding"
 	android:background="?attr/bg_color"
-	android:orientation="vertical">
+	android:orientation="horizontal"
+	android:padding="@dimen/content_padding">
+
+	<ImageView
+		android:id="@+id/icon"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginTop="@dimen/content_padding_small"
+		android:layout_marginRight="@dimen/content_padding"
+		android:src="@drawable/ic_action_folder_cloud_colored" />
 
 	<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:layout_marginLeft="@dimen/content_padding"
-		android:layout_marginTop="@dimen/content_padding"
-		android:layout_marginBottom="@dimen/content_padding"
-		android:orientation="horizontal">
-
-		<ImageView
-			android:id="@+id/icon"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_marginTop="@dimen/content_padding_small"
-			android:layout_marginRight="@dimen/content_padding"
-			android:src="@drawable/ic_action_folder_cloud_colored" />
+		android:orientation="vertical">
 
 		<LinearLayout
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:orientation="vertical">
+			android:orientation="horizontal">
 
 			<LinearLayout
-				android:layout_width="match_parent"
+				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:orientation="horizontal">
+				android:layout_marginLeft="@dimen/content_padding"
+				android:layout_marginTop="@dimen/content_padding_small"
+				android:layout_weight="1"
+				android:orientation="vertical">
 
-				<LinearLayout
+				<TextView
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
-					android:layout_marginLeft="@dimen/content_padding"
-					android:layout_marginTop="@dimen/content_padding_small"
-					android:layout_weight="1"
-					android:orientation="vertical">
+					android:text="@string/free_favorites_backup"
+					android:textColor="?android:textColorPrimary"
+					android:textSize="16sp"
+					osmand:typeface="@string/font_roboto_medium" />
 
-					<TextView
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:text="@string/free_favorites_backup"
-						android:textColor="?android:textColorPrimary"
-						android:textSize="16sp"
-						osmand:typeface="@string/font_roboto_medium" />
-
-					<TextView
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:text="@string/free_favorites_backup_description"
-						android:textColor="?android:textColorSecondary"
-						android:textSize="16sp" />
-				</LinearLayout>
-
-				<ImageView
-					android:id="@+id/btn_close"
+				<TextView
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
-					android:layout_marginRight="@dimen/content_padding_small"
-					android:layout_marginLeft="@dimen/content_padding_small"
-					android:src="@drawable/ic_action_cancel" />
-
+					android:text="@string/free_favorites_backup_description"
+					android:textColor="?android:textColorSecondary"
+					android:textSize="16sp" />
 			</LinearLayout>
 
-			<include
-				android:id="@+id/bt_get_osmand_cloud"
-				layout="@layout/bottom_buttons" />
+			<ImageButton
+				android:id="@+id/btn_close"
+				android:layout_width="@dimen/acceptable_touch_radius"
+				android:layout_height="@dimen/acceptable_touch_radius"
+				android:layout_marginLeft="@dimen/content_padding_small"
+				android:layout_marginRight="@dimen/content_padding_small"
+				osmand:srcCompat="@drawable/ic_action_cancel" />
 
 		</LinearLayout>
+
+		<include
+			android:id="@+id/dismiss_button"
+			layout="@layout/bottom_sheet_dialog_button"
+			android:layout_width="match_parent"
+			android:layout_height="@dimen/dialog_button_height"
+			android:layout_margin="@dimen/content_padding"
+			android:layout_weight="0" />
 
 	</LinearLayout>
 
