--- a/OsmAnd/res/layout/fragment_terrain.xml
+++ b/OsmAnd/res/layout/fragment_terrain.xml
@@ -102,7 +102,7 @@
 						android:orientation="horizontal"
 						android:paddingStart="@dimen/content_padding">
 
-						<TextView
+						<net.osmand.plus.widgets.TextViewEx
 							android:layout_width="0dp"
 							android:layout_height="wrap_content"
 							android:layout_gravity="center_vertical"
@@ -110,7 +110,6 @@
 							android:text="@string/srtm_color_scheme"
 							android:textColor="?android:textColorPrimary"
 							android:textSize="@dimen/default_list_text_size"
-							android:textStyle="normal"
 							osmand:typeface="@string/font_roboto_medium" />
 
 						<LinearLayout
@@ -275,7 +274,7 @@
 						android:src="@drawable/ic_action_storage"
 						android:tint="?attr/default_icon_color" />
 
-					<TextView
+					<net.osmand.plus.widgets.TextViewEx
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
 						android:layout_weight="1"
@@ -285,7 +284,7 @@
 						android:textSize="@dimen/default_list_text_size"
 						osmand:typeface="@string/font_roboto_regular" />
 
-					<TextView
+					<net.osmand.plus.widgets.TextViewEx
 						android:id="@+id/cache_size_value"
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
