--- a/OsmAnd/res/values/styles.xml
+++ b/OsmAnd/res/values/styles.xml
@@ -234,13 +234,14 @@
         <item name="dlg_btn_ripple_solid">@drawable/ripple_solid_light</item>
         <item name="dlg_btn_ripple_tertiary">@drawable/ripple_tetriary_light</item>
         <item name="dlg_btn_primary">@drawable/dlg_btn_primary_light</item>
-        <item name="dlg_btn_primary_harmfull">@drawable/dlg_btn_primary_harmfull</item>
+        <item name="dlg_btn_primary_harmful">@drawable/dlg_btn_primary_harmful</item>
         <item name="dlg_btn_primary_text">@color/dlg_btn_primary_text_light</item>
         <item name="dlg_btn_secondary">@drawable/dlg_btn_secondary_light</item>
         <item name="dlg_btn_secondary_text">@color/dlg_btn_secondary_text_light</item>
         <item name="dlg_btn_transparent">@drawable/dlg_btn_transparent_light</item>
         <item name="dlg_btn_stroked">@drawable/dlg_btn_stroked_light</item>
         <item name="dlg_btn_tertiary_text">@color/button_color_active_light</item>
+        <item name="dlg_btn_tertiary_harmful">@drawable/dlg_btn_tertiary_harmful</item>
         <item name="dlg_btn_secondary_harmful_text">@color/color_osm_edit_delete</item>
         <item name="stroked_btn_contour">@drawable/stroked_btn_contour_light</item>
         <item name="profile_save_btn">@drawable/btn_round_profile_blue</item>
@@ -565,7 +566,7 @@
         <item name="dlg_btn_ripple_solid">@drawable/ripple_solid_dark</item>
         <item name="dlg_btn_ripple_tertiary">@drawable/ripple_dark</item>
         <item name="dlg_btn_primary">@drawable/dlg_btn_primary_dark</item>
-        <item name="dlg_btn_primary_harmfull">@drawable/dlg_btn_primary_harmfull</item>
+        <item name="dlg_btn_primary_harmful">@drawable/dlg_btn_primary_harmful</item>
         <item name="dlg_btn_primary_text">@color/dlg_btn_primary_text_dark</item>
         <item name="stroked_btn_contour">@drawable/stroked_btn_contour_dark</item>
         <item name="dlg_btn_secondary">@drawable/dlg_btn_secondary_dark</item>
@@ -574,6 +575,7 @@
         <item name="dlg_btn_transparent">@drawable/dlg_btn_transparent_dark</item>
         <item name="dlg_btn_stroked">@drawable/dlg_btn_stroked_dark</item>
         <item name="dlg_btn_tertiary_text">@color/active_color_primary_dark</item>
+        <item name="dlg_btn_tertiary_harmful">@drawable/dlg_btn_tertiary_harmful</item>
         <item name="profile_save_btn">@drawable/btn_round_profile_night</item>
         <item name="profile_cancel_btn">@drawable/btn_round_profile_gray_n</item>
 
