--- a/OsmAnd/res/values/phrases.xml
+++ b/OsmAnd/res/values/phrases.xml
@@ -5157,4 +5157,6 @@
 	<string name="poi_surface_plastic">Surface: plastic</string>
 	<string name="poi_surface_rubber">Surface: rubber</string>
 
+	<string name="poi_assembly_point">Assembly point</string>
+
 </resources>
