--- a/OsmAnd/res/values/phrases.xml
+++ b/OsmAnd/res/values/phrases.xml
@@ -5158,5 +5158,6 @@
 	<string name="poi_surface_rubber">Surface: rubber</string>
 
 	<string name="poi_assembly_point">Assembly point</string>
+	<string name="poi_osmand_not_pt_shelter_yes">All except public transport shelters</string>
 
 </resources>
