--- a/OsmAnd/res/layout/fragment_external_device_details.xml
+++ b/OsmAnd/res/layout/fragment_external_device_details.xml
@@ -18,7 +18,6 @@
 		<LinearLayout
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:layout_marginBottom="@dimen/content_padding_small"
 			android:background="?attr/appbar_and_list_background_color"
 			android:elevation="2dp"
 			android:orientation="vertical">
@@ -142,6 +141,7 @@
 			<LinearLayout
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
+				android:layout_marginTop="@dimen/content_padding_small"
 				android:orientation="vertical">
 
 				<LinearLayout
