--- a/OsmAnd/res/layout/preference_item_description.xml
+++ b/OsmAnd/res/layout/preference_item_description.xml
@@ -1,27 +1,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:osmand="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
 	android:background="?attr/list_background_color"
-	android:minHeight="64dp"
+	android:minHeight="@dimen/bottom_sheet_large_list_item_height"
 	android:orientation="vertical">
 
-	<TextView
+	<net.osmand.plus.widgets.TextViewEx
 		android:id="@android:id/title"
+		style="@style/DescStyle"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:layout_gravity="center_vertical"
 		android:layout_marginHorizontal="@dimen/content_padding"
 		android:layout_marginVertical="@dimen/content_padding_small"
-		android:letterSpacing="@dimen/text_button_letter_spacing"
-		android:lineSpacingExtra="5sp"
-		android:text="@string/dangerous_goods_description"
 		android:textColor="?android:textColorSecondary"
-		android:textSize="@dimen/default_desc_text_size"
-		osmand:typeface="@string/font_roboto_regular" />
+		tools:text="@string/dangerous_goods_description" />
 
-	<View
-		android:layout_width="match_parent"
-		android:layout_height="1dp"
-		android:background="?attr/divider_color_basic" />
 </LinearLayout>
