--- a/OsmAnd/res/menu/myplaces_selection_menu.xml
+++ b/OsmAnd/res/menu/myplaces_selection_menu.xml
@@ -2,10 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_search"
-        android:contentDescription="@string/shared_string_search"
-        android:icon="@drawable/ic_action_search_dark"
-        android:title="@string/shared_string_search"
+        android:id="@+id/action_select"
+        android:icon="@drawable/ic_action_select_all"
+        android:title="@string/shared_string_select_all"
         app:showAsAction="always" />
     <item
         android:id="@+id/action_menu"
