--- a/OsmAnd/res/values-eo/phrases.xml
+++ b/OsmAnd/res/values-eo/phrases.xml
@@ -3866,7 +3866,7 @@
     <string name="poi_water_source_tap">krano</string>
     <string name="poi_water_source_water_works">akvokondukilo</string>
     <string name="poi_water_source_tube_well">puto tuba (abisena)</string>
-    <string name="poi_weightbridge">Pesilo por aŭtomobiloj;kamiona pesilo;aŭtomobila pesilo;automobila pesilo</string>
+    <string name="poi_weighbridge">Pesilo por aŭtomobiloj;kamiona pesilo;aŭtomobila pesilo;automobila pesilo</string>
     <string name="poi_ranger_station">Oficejo de naturrezervejo</string>
     <string name="poi_lavoir">Vestaĵ-lavejo (ĉe rivero)</string>
     <string name="poi_waste_transfer_station">Stacio de rubmastrumado</string>
