--- a/OsmAnd/res/values-ar/phrases.xml
+++ b/OsmAnd/res/values-ar/phrases.xml
@@ -3660,7 +3660,7 @@
     <string name="poi_community_gender_mixed">نوع المجتمع: مختلط</string>
     <string name="poi_lavoir">مكان لغسل الملابس يدويا</string>
     <string name="poi_waste_transfer_station">محطة نقل نفايات</string>
-    <string name="poi_weightbridge">ميزان الجسر؛ميزان شاحنات</string>
+    <string name="poi_weighbridge">ميزان الجسر؛ميزان شاحنات</string>
     <string name="poi_ranger_station">مكتب الحارس</string>
     <string name="poi_diplomatic_services_citizen_services_filter">خدمات المواطنين</string>
     <string name="poi_diplomatic_services_immigrant_visas_filter">تأشيرات للهجرة</string>
