--- a/OsmAnd/res/values-es-rUS/phrases.xml
+++ b/OsmAnd/res/values-es-rUS/phrases.xml
@@ -3860,7 +3860,7 @@
     <string name="poi_health_specialty_vaccination_yes">Vacunación</string>
     <string name="poi_lavoir">Lavadero público de ropa</string>
     <string name="poi_waste_transfer_station">Estación de transferencia de residuos</string>
-    <string name="poi_weightbridge">Báscula puente;Báscula de camiones;Balanza</string>
+    <string name="poi_weighbridge">Báscula puente;Báscula de camiones;Balanza</string>
     <string name="poi_ranger_station">Estación de guardabosques</string>
     <string name="poi_water_source_lake">Lago</string>
     <string name="poi_water_source_river">Río</string>
