--- a/OsmAnd/res/values-pt/phrases.xml
+++ b/OsmAnd/res/values-pt/phrases.xml
@@ -3859,7 +3859,7 @@
     <string name="poi_vaccination_covid19">Vacinação: COVID19</string>
     <string name="poi_health_specialty_vaccination_yes">Vacinação</string>
     <string name="poi_waste_transfer_station">Estação de transferência de resíduos</string>
-    <string name="poi_weightbridge">Báscula-ponte (balança de veículos);Ponte báscula</string>
+    <string name="poi_weighbridge">Báscula-ponte (balança de veículos);Ponte báscula</string>
     <string name="poi_water_source_lake">Lago</string>
     <string name="poi_water_source_river">Rio</string>
     <string name="poi_water_source_water_tank">Tanque de água</string>
