--- a/OsmAnd/res/values-ru/phrases.xml
+++ b/OsmAnd/res/values-ru/phrases.xml
@@ -3870,7 +3870,7 @@
     <string name="poi_water_source_water_works">Водозабор</string>
     <string name="poi_water_source_tube_well">Трубчатый колодец</string>
     <string name="poi_mobile_money_agent">Мобильный платёжный офис</string>
-    <string name="poi_weightbridge">Весовая платформа;Автомобильные весы</string>
+    <string name="poi_weighbridge">Весовая платформа;Автомобильные весы</string>
     <string name="poi_lavoir">Умывальник</string>
     <string name="poi_waste_transfer_station">Станция перекачки отходов</string>
     <string name="poi_ranger_station">Станция рейнджеров</string>
