--- a/OsmAnd/res/values-zh-rTW/phrases.xml
+++ b/OsmAnd/res/values-zh-rTW/phrases.xml
@@ -3866,7 +3866,7 @@
     <string name="poi_water_source_tap">點擊</string>
     <string name="poi_water_source_water_works">自來水廠</string>
     <string name="poi_water_source_tube_well">管井</string>
-    <string name="poi_weightbridge">地磅</string>
+    <string name="poi_weighbridge">地磅</string>
     <string name="poi_ranger_station">護林員站</string>
     <string name="poi_lavoir">公共洗衣區</string>
     <string name="poi_waste_transfer_station">垃圾站</string>
