--- a/OsmAnd/res/layout/dialog_list_item_with_compound_button.xml
+++ b/OsmAnd/res/layout/dialog_list_item_with_compound_button.xml
@@ -21,6 +21,7 @@
 		android:orientation="horizontal">
 		
 		<FrameLayout
+			android:id="@+id/compound_buttons_container"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_gravity="center_vertical"
