--- a/OsmAnd/res/layout/configure_map_option_fragment.xml
+++ b/OsmAnd/res/layout/configure_map_option_fragment.xml
@@ -2,6 +2,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
+	xmlns:osmand="http://schemas.android.com/apk/res-auto"
+
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:background="@color/color_transparent">
@@ -63,7 +65,6 @@
 	</com.google.android.material.appbar.AppBarLayout>
 
 	<LinearLayout
-		android:id="@+id/main_view"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:layout_gravity="bottom"
@@ -115,13 +116,14 @@
 
 			</LinearLayout>
 
-			<include
+			<net.osmand.plus.widgets.dialogbutton.DialogButton
 				android:id="@+id/apply_button"
-				layout="@layout/bottom_sheet_dialog_button"
 				android:layout_width="match_parent"
-				android:layout_height="@dimen/dialog_button_height"
+				android:layout_height="wrap_content"
 				android:layout_marginHorizontal="@dimen/content_padding"
-				android:layout_marginTop="@dimen/content_padding" />
+				osmand:dialogButtonHeight="@dimen/dialog_button_height"
+				osmand:dialogButtonTitle="@string/shared_string_apply"
+				osmand:dialogButtonTopMargin="@dimen/content_padding" />
 
 		</LinearLayout>
 
