--- a/OsmAnd/res/xml/development_settings.xml
+++ b/OsmAnd/res/xml/development_settings.xml
@@ -106,18 +106,16 @@
 		android:layout="@layout/preference_category_with_descr"
 		android:title="@string/shared_string_trip_recording" />
 
-	<net.osmand.plus.settings.preferences.RadioButtonBooleanPreference
+	<net.osmand.plus.settings.preferences.SwitchPreferenceEx
 		android:key="save_bearing_to_gpx"
 		android:layout="@layout/preference_with_descr"
-		android:persistent="false"
 		android:summaryOff="@string/shared_string_no"
 		android:summaryOn="@string/shared_string_yes"
 		android:title="@string/write_bearing" />
 
-	<net.osmand.plus.settings.preferences.RadioButtonBooleanPreference
+	<net.osmand.plus.settings.preferences.SwitchPreferenceEx
 		android:key="save_heading_to_gpx"
 		android:layout="@layout/preference_with_descr"
-		android:persistent="false"
 		android:summaryOff="@string/shared_string_no"
 		android:summaryOn="@string/shared_string_yes"
 		android:title="@string/write_heading" />
