--- a/OsmAnd/res/values/styles.xml
+++ b/OsmAnd/res/values/styles.xml
@@ -68,7 +68,7 @@
         <item name="buttonStyle">@style/Widget.AppCompat.Button.Colored</item>
         <item name="bottom_bar_background_color">@color/bottom_bar_background_color_light</item>
         <item name="android:textDirection">locale</item>
-        <item name="android:statusBarColor">@color/status_bar_color_light</item>
+        <item name="android:statusBarColor">@color/status_bar_main_light</item>
         <item name="mapBackground">@color/map_background_color_light</item>
         <item name="chart_marker_background">@drawable/chart_marker_background_light</item>
         <item name="chart_label_background">@drawable/chart_label_background_light</item>
@@ -82,8 +82,8 @@
         <item name="expandable_category_color">?android:attr/colorBackground</item>
         <item name="bottomToolBarColor">@color/tool_bar_color_light</item>
         <item name="downloadButtonBackground">@drawable/download_light</item>
-        <item name="pstsTabBackground">@color/app_bar_color_light</item>
-        <item name="pstsUnderlineColor">@color/app_bar_color_light</item>
+        <item name="pstsTabBackground">@color/app_bar_main_light</item>
+        <item name="pstsUnderlineColor">@color/app_bar_main_light</item>
         <item name="pstsIndicatorColor">@color/active_color_primary_light</item>
         <item name="pstsTextColor">@color/text_color_tab_active_light</item>
         <item name="pstsInactiveTextColor">@color/searchbar_tab_inactive_light</item>
@@ -91,7 +91,7 @@
         <item name="btn_border_bg">@drawable/btn_border_bg_light</item>
         <item name="banner_border_bg">@drawable/banner_border_bg_light</item>
         <item name="android:windowContentOverlay">@null</item>
-        <item name="actionModeBackground">@color/app_bar_color_light</item>
+        <item name="actionModeBackground">@color/app_bar_main_light</item>
         <item name="actionBarStyle">@style/Widget.Styled.ActionBarLight</item>
         <item name="bg_color">@color/list_background_color_light</item>
         <item name="bg_circle">@drawable/circle_background_light</item>
@@ -147,7 +147,7 @@
         <item name="colorPrimaryDark">@color/osmand_orange_dark</item>
         <item name="colorAccent">@color/active_color_primary_light</item>
 
-        <item name="android:actionModeBackground">@color/app_bar_color_light</item>
+        <item name="android:actionModeBackground">@color/app_bar_main_light</item>
         <item name="android:actionBarStyle">@style/Widget.Styled.ActionBarLight</item>
         <item name="android:actionModeCloseDrawable">@drawable/ic_arrow_back</item>
         <item name="android:actionModeStyle">@style/WhiteActionMode</item>
@@ -188,10 +188,10 @@
         <item name="dialog_text_description_color">@color/text_color_secondary_light</item>
         <item name="card_description_text_color">@color/text_color_tertiary_light</item>
 
-        <item name="wikivoyage_bg_color">@color/wikivoyage_bg_light</item>
-        <item name="wikivoyage_card_bg_color">@color/wikivoyage_card_bg_light</item>
+        <item name="wikivoyage_bg_color">@color/activity_background_color_light</item>
+        <item name="wikivoyage_card_bg_color">@color/card_and_list_background_light</item>
         <item name="wikivoyage_card_divider_color">@color/wikivoyage_card_divider_light</item>
-        <item name="wikivoyage_app_bar_color">@color/wikivoyage_app_bar_light</item>
+        <item name="wikivoyage_app_bar_color">@color/activity_background_color_light</item>
         <item name="wikivoyage_app_bar_text_color">@color/wikivoyage_app_bar_text_light</item>
         <item name="wikivoyage_active_color">@color/wikivoyage_active_light</item>
         <item name="wikivoyage_bottom_bar_bg_color">@color/wikivoyage_bottom_bar_bg_light</item>
@@ -228,7 +228,7 @@
         <item name="active_color_basic">@color/active_color_primary_light</item>
         <item name="profile_icon_color_green">@color/profile_icon_color_green_light</item>
         <item name="card_and_list_background_basic">@color/card_and_list_background_light</item>
-        <item name="activity_background_basic">@color/activity_background_light</item>
+        <item name="activity_background_basic">@color/activity_background_color_light</item>
         <item name="pages_bg">@drawable/pages_bg_light</item>
         <item name="dlg_btn_ripple">@drawable/ripple_light</item>
         <item name="dlg_btn_ripple_solid">@drawable/ripple_solid_light</item>
@@ -410,7 +410,7 @@
     <style name="OsmandDarkTheme" parent="Theme.MaterialComponents">
         <item name="bottom_bar_background_color">@color/bottom_bar_background_color_dark</item>
         <item name="android:textDirection">locale</item>
-        <item name="android:statusBarColor">@color/status_bar_color_dark</item>
+        <item name="android:statusBarColor">@color/status_bar_main_dark</item>
         <item name="mapBackground">@color/map_background_color_dark</item>
         <item name="chart_marker_background">@drawable/chart_marker_background_dark</item>
         <item name="chart_label_background">@drawable/chart_label_background_dark</item>
@@ -424,15 +424,15 @@
         <item name="expandable_category_color">?android:attr/colorBackground</item>
         <item name="bottomToolBarColor">@color/tool_bar_color_dark</item>
         <item name="downloadButtonBackground">@drawable/download_dark</item>
-        <item name="pstsTabBackground">@color/app_bar_color_dark</item>
-        <item name="pstsUnderlineColor">@color/app_bar_color_dark</item>
+        <item name="pstsTabBackground">@color/app_bar_main_dark</item>
+        <item name="pstsUnderlineColor">@color/app_bar_main_dark</item>
         <item name="pstsIndicatorColor">@color/active_color_primary_light</item>
         <item name="pstsTextColor">@color/text_color_tab_active_dark</item>
         <item name="pstsInactiveTextColor">@color/searchbar_tab_inactive_dark</item>
         <item name="btn_flat_bg">@drawable/btn_flat_night</item>
         <item name="btn_border_bg">@drawable/btn_border_bg_dark</item>
         <item name="banner_border_bg">@drawable/banner_border_bg_dark</item>
-        <item name="actionModeBackground">@color/app_bar_color_dark</item>
+        <item name="actionModeBackground">@color/app_bar_main_dark</item>
         <item name="actionBarStyle">@style/Widget.Styled.ActionBarDark</item>
         <item name="bg_color">@color/list_background_color_dark</item>
         <item name="bg_circle">@drawable/circle_background_dark</item>
@@ -477,9 +477,9 @@
 
         <item name="spinnerItemTextColor">@color/color_white</item>
         <item name="spinnerListBackground">@color/spinner_list_background_dark</item>
-        <item name="colorButtonNormal">@color/app_bar_color_dark</item>
+        <item name="colorButtonNormal">@color/app_bar_main_dark</item>
 
-        <item name="android:actionModeBackground">@color/app_bar_color_dark</item>
+        <item name="android:actionModeBackground">@color/app_bar_main_dark</item>
         <item name="android:actionBarStyle">@style/Widget.Styled.ActionBarDark</item>
         <item name="actionOverflowButtonStyle">@style/OverflowMenuButton</item>
 
@@ -520,10 +520,10 @@
         <item name="dialog_text_description_color">@color/text_color_secondary_dark</item>
         <item name="card_description_text_color">@color/text_color_tertiary_dark</item>
 
-        <item name="wikivoyage_bg_color">@color/wikivoyage_bg_dark</item>
-        <item name="wikivoyage_card_bg_color">@color/wikivoyage_card_bg_dark</item>
+        <item name="wikivoyage_bg_color">@color/activity_background_color_dark</item>
+        <item name="wikivoyage_card_bg_color">@color/card_and_list_background_dark</item>
         <item name="wikivoyage_card_divider_color">@color/wikivoyage_card_divider_dark</item>
-        <item name="wikivoyage_app_bar_color">@color/wikivoyage_app_bar_dark</item>
+        <item name="wikivoyage_app_bar_color">@color/activity_background_color_dark</item>
         <item name="wikivoyage_app_bar_text_color">@color/wikivoyage_app_bar_text_dark</item>
         <item name="wikivoyage_active_color">@color/wikivoyage_active_dark</item>
         <item name="wikivoyage_bottom_bar_bg_color">@color/wikivoyage_bottom_bar_bg_dark</item>
@@ -560,7 +560,7 @@
         <item name="active_color_basic">@color/active_color_primary_dark</item>
         <item name="profile_icon_color_green">@color/profile_icon_color_green_dark</item>
         <item name="card_and_list_background_basic">@color/card_and_list_background_dark</item>
-        <item name="activity_background_basic">@color/activity_background_dark</item>
+        <item name="activity_background_basic">@color/activity_background_color_dark</item>
         <item name="pages_bg">@drawable/pages_bg_dark</item>
         <item name="dlg_btn_ripple">@drawable/ripple_dark</item>
         <item name="dlg_btn_ripple_solid">@drawable/ripple_solid_dark</item>
@@ -606,7 +606,7 @@
         <item name="ic_action_android_auto_logo_colored">@drawable/ic_action_android_auto_colored_night</item>
         <item name="chip_ripple">@drawable/ripple_solid_dark_18dp</item>
         <item name="chip_content_color">@color/active_color_primary_dark</item>
-        <item name="appbar_and_list_background_color">@color/app_bar_color_dark</item>
+        <item name="appbar_and_list_background_color">@color/app_bar_main_dark</item>
         <item name="image_tile_placeholder">@drawable/img_placeholder_tile_night</item>
         <item name="toolbar_back_button_color">@color/icon_color_primary_dark</item>
         <item name="toolbar_title_color">@color/text_color_primary_dark</item>
@@ -650,17 +650,17 @@
 
     <!-- Standard action bar override -->
     <style name="Widget.Styled.ActionBarDark" parent="Widget.AppCompat.Light.ActionBar.Solid.Inverse">
-        <item name="background">@color/app_bar_color_dark</item>
+        <item name="background">@color/app_bar_main_dark</item>
         <item name="titleTextStyle">@style/Widget.Styled.DarkActionBarTitle</item>
 
-        <item name="android:background">@color/app_bar_color_dark</item>
+        <item name="android:background">@color/app_bar_main_dark</item>
         <item name="android:titleTextStyle">@style/Widget.Styled.DarkActionBarTitle</item>
         <item name="elevation">0dp</item>
     </style>
 
     <style name="Widget.Styled.ActionBarLight" parent="Widget.AppCompat.Light.ActionBar.Solid">
-        <item name="background">@color/app_bar_color_light</item>
-        <item name="android:background">@color/app_bar_color_light</item>
+        <item name="background">@color/app_bar_main_light</item>
+        <item name="android:background">@color/app_bar_main_light</item>
         <item name="titleTextStyle">@style/Widget.Styled.LightActionBarTitle</item>
         <item name="subtitleTextStyle">@style/Widget.Styled.LightActionBarSubtitle</item>
         <item name="actionBarWidgetTheme">@style/Theme.AppCompat</item>
