Allow to completely disable map rotation using gesture.
The map rotation using gesture was possible even when "North is up" is set as Map orientation. So, create a separate independent setting to disallow the gesture. Actually, the setting can be useful even in other Map orientation modes.

By default, the gesture is enabled, so the app behaves as before.

Disabling the rotation gesture allows users to avoid accidental rotation when zooming was intended. The problem manifests itself e.g. in these scenarios:
- (1) I zoom the map. The map rotates while zooming. I need to click the compass icon to revert to North is up. Actually I needed to build the habit of "checking if north is up" after each zooming, which is annoying.
- (2) I zoom the map. The map rotates while zooming. I do not notice this. Later, I notice "something is wrong with the map". Click the compass icon.
- (3) During some activity (geocaching, bike, sport) I accidentally rotate the map without the intention to do anything. Usually I do not notice this and it continues as in (2).

This supports the issue 15660 and some related issues.

--- a/OsmAnd/res/xml/general_profile_settings.xml
+++ b/OsmAnd/res/xml/general_profile_settings.xml
@@ -88,6 +88,13 @@
 		android:title="@string/use_volume_buttons_as_zoom"
 		tools:icon="@drawable/ic_action_zoom_volume_buttons" />
 
+	<net.osmand.plus.settings.preferences.SwitchPreferenceEx
+		android:key="map_rotation_using_two_pointers_rotation_gesture"
+		android:layout="@layout/preference_with_descr_dialog_and_switch"
+		android:summaryOff="@string/shared_string_disabled"
+		android:summaryOn="@string/shared_string_enabled"
+		android:title="@string/map_rotation_using_two_pointers_rotation_gesture" />
+
 	<net.osmand.plus.settings.preferences.ListPreferenceEx
 		android:key="external_input_device"
 		android:layout="@layout/preference_with_descr"
