--- a/OsmAnd/res/layout/help_activity.xml
+++ b/OsmAnd/res/layout/help_activity.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	android:background="?attr/activity_background_color"
-	android:orientation="vertical">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+			  android:orientation="vertical"
+			  android:layout_width="match_parent"
+			  android:layout_height="match_parent">
 
-	<FrameLayout
-		android:id="@+id/fragmentContainer"
+	<net.osmand.plus.widgets.WebViewEx
+		android:id="@+id/webView"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent" />
+		android:layout_height="0dp"
+		android:layout_weight="1"/>
 
-</FrameLayout>
+	<net.osmand.plus.activities.search.toolbar.SplitToolbar
+		android:orientation="horizontal"
+		android:id="@+id/bottomControls"
+		android:background="?attr/bottomToolBarColor"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"/>
+</LinearLayout>
