--- a/OsmAnd/res/values/phrases.xml
+++ b/OsmAnd/res/values/phrases.xml
@@ -115,6 +115,8 @@
 	<string name="poi_socket_cee_blue_voltage_filter">CEE blue connector voltage</string>
 	<string name="poi_socket_schuko_output_filter">Schuko connector output</string>
 	<string name="poi_socket_schuko_voltage_filter">Schuko connector voltage</string>
+	<string name="poi_socket_typee_voltage_filter">Type E connector voltage</string>
+	<string name="poi_socket_typee_output_filter">Type E connector output</string>
 	<string name="poi_service_car">Car service</string>
 	<string name="poi_glacier_type">Glacier type</string>
 	<string name="poi_checkpoint_type">Checkpoint type</string>
@@ -5025,6 +5027,9 @@
 	<string name="poi_socket_schuko_voltage_high">High</string>
 	<string name="poi_socket_schuko_voltage_medium">Medium</string>
 	<string name="poi_socket_schuko_voltage_low">Low</string>
+	<string name="poi_socket_typee_voltage_high">High</string>
+	<string name="poi_socket_typee_voltage_medium">Medium</string>
+	<string name="poi_socket_typee_voltage_low">Low</string>
 
 	<string name="poi_hiking_yes">Yes</string>
 
@@ -5037,6 +5042,9 @@
 	<string name="poi_socket_type3c_output_high">High</string>
 	<string name="poi_socket_type3c_output_medium">Medium</string>
 	<string name="poi_socket_type3c_output_low">Low</string>
+	<string name="poi_socket_typee_output_high">High</string>
+	<string name="poi_socket_typee_output_medium">Medium</string>
+	<string name="poi_socket_typee_output_low">Low</string>
 
 	<string name="poi_self_checkout_no">Self checkout: no</string>
 	<string name="poi_self_checkout_yes">Yes</string>
