--- a/OsmAnd/res/values/phrases.xml
+++ b/OsmAnd/res/values/phrases.xml
@@ -3711,6 +3711,10 @@
 	<string name="poi_socket_as3112">Socket: AS/NZS 3112</string>
 	<string name="poi_socket_as3112_current">Socket: AS/NZS 3112: current</string>
 	<string name="poi_socket_as3112_output">Socket: AS/NZS 3112: output</string>
+	<string name="poi_socket_typee">Socket: Type E</string>
+	<string name="poi_socket_typee_current">Socket: Type E: current</string>
+	<string name="poi_socket_typee_output">Socket: Type E: output</string>
+	<string name="poi_socket_typee_voltage">Socket: Type E: voltage</string>
 
 	<string name="poi_car_no">Car: no</string>
 	<string name="poi_bicycle_yes">Bicycle: yes</string>
