--- a/OsmAnd/res/layout/filter_name_item.xml
+++ b/OsmAnd/res/layout/filter_name_item.xml
@@ -13,6 +13,7 @@
 		android:layout_weight="1"
 		android:layout_margin="@dimen/list_content_padding"
 		android:focusable="true"
+		app:hasClearButton="true"
 		android:focusableInTouchMode="true"
 		app:primaryColor="@color/active_color_primary_dark"
 		app:secondaryColor="?android:textColorSecondary"
