--- a/OsmAnd/res/layout/filter_range_item.xml
+++ b/OsmAnd/res/layout/filter_range_item.xml
@@ -73,7 +73,7 @@
 				android:id="@+id/value_from_et"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
-				android:inputType="text"
+				android:inputType="number"
 				android:maxLines="1"
 				android:scrollHorizontally="true" />
 
@@ -98,7 +98,7 @@
 				android:id="@+id/value_to_et"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
-				android:inputType="text"
+				android:inputType="number"
 				android:maxLines="1"
 				android:scrollHorizontally="true" />
 
@@ -110,6 +110,7 @@
 		android:id="@+id/slider"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
+		app:labelBehavior="gone"
 		android:layout_marginStart="@dimen/content_padding_small"
 		android:layout_marginLeft="@dimen/content_padding_small"
 		android:layout_marginEnd="@dimen/content_padding_small"
