--- a/OsmAnd/res/values/phrases.xml
+++ b/OsmAnd/res/values/phrases.xml
@@ -5199,4 +5199,6 @@
 	<string name="poi_health_specialty_massage_therapy_yes">Massage therapy</string>
 	<string name="poi_health_specialty_vascular_surgery_yes">Vascular surgery</string>
 
+	<string name="poi_checkpoint_cycling">Cycling checkpoint</string>
+
 </resources>
