--- a/OsmAnd/res/values/phrases.xml
+++ b/OsmAnd/res/values/phrases.xml
@@ -3828,6 +3828,7 @@
 	<string name="poi_socket_type2_yes">Type 2</string>
 	<string name="poi_socket_type2_combo_yes">Type 2 combo</string>
 	<string name="poi_socket_type3_yes">Type 3</string>
+	<string name="poi_socket_typee_yes">Type E</string>
 	<string name="poi_socket_chademo_yes">CHAdeMO</string>
 	<string name="poi_socket_tesla_standard_yes">Tesla standard</string>
 	<string name="poi_socket_tesla_supercharger_yes">Tesla Supercharger</string>
